# robotics_environment

./: Dockerfile  LICENSE  README.md  docker-compose.yml  robot.launch.py  run_simulation.bash  run_solution.bash  simulation.launch.py  solution.launch.py  solution_on_robot.launch.py
bags/rosbag2_2025_10_28-18_42_19/: metadata.yaml
bags/rosbag2_2025_10_29-22_39_40/: metadata.yaml  rosbag2_2025_10_29-22_39_40_0.db3
ros2_ws/src/ldlidar_ros2/sdk/sample/linux/: demo.cpp
ros2_ws/src/ldlidar_ros2/sdk/sample/windows/: windemo.cpp
ros2_ws/src/ldlidar_ros2/sdk/test/: test.cpp
ros2_ws/src/ldlidar_ros2/src/: demo.cpp
ros2_ws/src/maze_solver/: package.xml  setup.py
ros2_ws/src/maze_solver/config/: nav2_params.yaml  rtabmap_params.yaml
ros2_ws/src/maze_solver/launch/: auto_goal.launch.py  map_and_nav.launch.py  simple_driver.launch.py
ros2_ws/src/maze_solver/maze_solver/: auto_goal_node.py  fixed_goal_node.py  lidar_filter_node.py  simple_driver_node.py
ros2_ws/src/waveshare_motor_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/waveshare_motor_driver/waveshare_motor_driver/: __init__.py  motor_driver_node.py
ros2_ws/src/webots_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/webots_bridge/launch/: robot_launch.py
ros2_ws/src/webots_bridge/protos/: CobraFlex.proto  GeneratedCones.proto  GeneratedMaze.proto
ros2_ws/src/webots_bridge/resource/: webots_bridge.urdf
ros2_ws/src/webots_bridge/webots_bridge/: webots_driver.py
ros2_ws/src/webots_bridge/worlds/: .cobra_flex_demo.wbproj  cobra_flex_demo.wbt
