<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_solver</name>
  <license>Apache-2.0</license>
  <version>0.0.0</version>
  <description>Решение для проезда по лабиринту</description>
  <maintainer email="pavel.skorynin@yandex.ru">pavel</maintainer>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rtabmap_ros</depend>
  <depend>rtabmap_msgs</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
