<?xml version="1.0"?>
<package format="3">
  <name>waveshare_motor_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver node that bridges cmd_vel to Waveshare sub-controller motors over serial.</description>
  <maintainer email="nikita.savinov@example.com">Nikita Savinov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
