<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_bridge</name>
  <license>Apache-2.0</license>
  <version>0.0.0</version>
  <description>Бридж для симуляции в Webots</description>
  <maintainer email="pavel.skorynin@yandex.ru">pavel</maintainer>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
